--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,106 +1,3 @@
-/* INFO START */
-
-.info {
-    padding: 50px 0;
-}
-
-.breadcrumbs {
-    display: flex;
-    align-items: center;
-    padding-left: 20px;
-}
-
-.breadcrumbs__item {
-    position: relative;
-}
-
-.breadcrumbs__item svg {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: calc(100% + 5px);
-}
-
-.breadcrumbs__item a,
-.breadcrumbs__item span {
-    font-size: 12px;
-    line-height: 1.5;
-}
-
-.breadcrumbs__item span {
-    margin-right: 5px;
-}
-
-.breadcrumbs__item.current span {
-    color: var(--text-grey-color);
-}
-
-.breadcrumbs__item--home a svg path {
-    transition: var(--default-transition);
-}
-
-.breadcrumbs__item--home a:hover svg path {
-    fill: var(--main-blue);
-}
-
-.page-banner {
-    padding: 70px 0 70px 45px;
-    background: linear-gradient(90deg, #FFF 0.04%, #537CE5 99.64%);
-    margin-top: 25px;
-    border-radius: 20px;
-}
-
-.page    -banner.skeleton {
-    background: transparent;
-}
-
-.title--banner {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.counter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 10px;
-    border: 1px solid var(--main-blue);
-    border-radius: 5px;
-    height: 35px;
-    font-size: 16px;
-    line-height: 1.5;
-    color: var(--main-blue);
-}
-
-.tags {
-    display: flex;
-    gap: 15px;
-    margin-top: 20px;
-}
-
-.tags__item {
-    height: 40px;
-    border-radius: 20px;
-    min-width: 190px;
-    transition: var(--default-transition);
-}
-
-.tags__item.skeleton {
-    background-color: transparent;
-}
-
-.tags__item a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    width: 100%;
-    height: 100%;
-}
-
-/* INFO END */
-
 /* CATALOG START*/
 
 .catalog {
@@ -827,16 +724,16 @@ ul.products-pagination {
     margin-top: 8px;
 }
 
+.product-card.row .product-card__buy-cart {
+    border: 1px solid var(--main-blue);
+}
+
 .product-card.row .product-card__buy-click,
 .product-card.row .product-card__buy-cart {
     width: calc(100% - 55px);
     border-radius: 5px;
     padding: 15px 40px;
     font-size: 16px;
-}
-
-.product-card.row .product-card__buy-cart.hide {
-    display: none;
 }
 
 .product-card.row .product-card__buy-click.skeleton,
@@ -859,10 +756,6 @@ ul.products-pagination {
     border: 1px solid var(--main-blue);
     border-radius: 5px;
     padding: 0;
-}
-
-.product-card.row .product-card__counter.hide {
-    display: none;
 }
 
 .product-card.row .product-card__counter button {
