--- a/css/global.css
+++ b/css/global.css
@@ -51,6 +51,7 @@ input {
 input::placeholder {
     font-size: 18px;
     font-weight: 400;
+    color: var(--subtitle-color);
 }
 
 input::-webkit-outer-spin-button,
@@ -358,3 +359,106 @@ select::-ms-expand {
 }
 
 /* SKELETON END */
+
+/* INFO START */
+
+.info {
+    padding: 50px 0;
+}
+
+.breadcrumbs {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.breadcrumbs__item {
+    position: relative;
+}
+
+.breadcrumbs__item svg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: calc(100% + 5px);
+}
+
+.breadcrumbs__item a,
+.breadcrumbs__item span {
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.breadcrumbs__item span.slash {
+    margin-right: 5px;
+}
+
+.breadcrumbs__item.current span {
+    color: var(--text-grey-color);
+}
+
+.breadcrumbs__item--home a svg path {
+    transition: var(--default-transition);
+}
+
+.breadcrumbs__item--home a:hover svg path {
+    fill: var(--main-blue);
+}
+
+.page-banner {
+    padding: 70px 0 70px 45px;
+    background: linear-gradient(90deg, #FFF 0.04%, #537CE5 99.64%);
+    margin-top: 25px;
+    border-radius: 20px;
+}
+
+.page    -banner.skeleton {
+    background: transparent;
+}
+
+.title--banner {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.counter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+    border: 1px solid var(--main-blue);
+    border-radius: 5px;
+    height: 35px;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--main-blue);
+}
+
+.tags {
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+.tags__item {
+    height: 40px;
+    border-radius: 20px;
+    min-width: 190px;
+    transition: var(--default-transition);
+}
+
+.tags__item.skeleton {
+    background-color: transparent;
+}
+
+.tags__item a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+/* INFO END */
