--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url('./catalog.css');
 @import url('./cart.css');
 @import url('./recs.css');
+@import url('./order.css');
 
 /* HEADER START */
 
@@ -1460,6 +1461,14 @@ a.header__categories-link:hover span {
     margin-top: 20px;
 }
 
+.product-card__buy-cart {
+    width: 50%;
+    border: none;
+    border-radius: 5px 5px 0 0;
+    font-size: 12px;
+    line-height: 1.5;
+}
+
 .product-card__counter {
     width: 50%;
     display: flex;
@@ -1468,6 +1477,14 @@ a.header__categories-link:hover span {
     padding: 0 20px;
     font-size: 16px;
     line-height: 1.5;
+}
+
+.product-card .product-card__buy-cart.hide {
+    display: none;
+}
+
+.product-card .product-card__counter.hide {
+    display: none;
 }
 
 .product-card__counter button,
