--- a/css/order.css
+++ b/css/order.css
@@ -264,4 +264,57 @@ a.tinkoff {
     color: var(--main-blue);
 }
 
+.order-apply {
+    padding-top: 45px;
+}
+
+.order-apply__return-to-catalog {
+    position: relative;
+    display: inline-block;
+    color: var(--main-blue);
+    font-size: 12px;
+    margin-left: 20px;
+}
+
+.order-apply__return-to-catalog::before {
+    content: '';
+    position: absolute;
+    background-image: url('../img/icons/return-catalog.svg');
+    background-repeat: no-repeat;
+    width: 13px;
+    height: 9px;
+    top: 50%;
+    right: calc(100% + 7px);
+    transform: translateY(-50%);
+}
+
+.order-apply__box {
+    padding: 55px 0 55px 145px;
+    background-color: var(--main-blue);
+    border-radius: 10px;
+    margin: 45px 0;
+}
+
+.order-apply__text-box {
+    max-width: 350px;
+}
+
+.order-apply__text-box p {
+    color: #fff;
+}
+
+.order-apply__box .order-apply__message {
+    text-transform: uppercase;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.order-apply__text-box .order-apply__text + .order-apply__text {
+    margin-top: 10px;
+}
+
+.rect-btn--return-to-catalog {
+    margin-top: 30px;
+}
+
 /* ORDER END */
