--- a/css/product.css
+++ b/css/product.css
@@ -12,47 +12,285 @@
     margin-top: 60px;
 }
 
-.product-tabs__inner {
-    display: flex;
-    padding: 0 80px;
-    justify-content: space-between;
-    margin-bottom: 50px;
-    border-bottom: 1px solid #eaebed;
-    position: relative;
+.product-tabs input[name=product-tab] {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
 }
 
-.product-tabs__inner .product-tabs__slider {
-    position: absolute;
-    height: 2px;
-    background-color: var(--main-blue);
-    width: calc(25% - 40px);
-    bottom: -1px;
-    left: 80px;
+.product-tabs__items {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 80px;
 }
 
 .product-tabs__item {
     width: 25%;
-    text-align: center;
 }
 
-.product-tabs__label {
+.product-tabs__item label {
     display: block;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 25px;
+    cursor: pointer;
+    transition: var(--default-transition);
     font-size: 16px;
     font-weight: 500;
-    padding-bottom: 25px;
-    color: var(--subtitle-color);
-    width: 100%;
-    cursor: pointer;
 }
 
-.product-tabs__label:has(input:checked) {
+.product-tabs__slider {
+    width: 100%;
+    height: 2px;
+    background-color: #eaebed;
+    padding: 0 80px;
+}
+
+.product-tabs__indicator {
+    background-color: var(--main-blue);
+    height: 2px;
+    width: calc(25%);
+    transform: translateX(0);
+    transition: var(--default-transition);
+}
+
+.product-tabs input[name=product-tab]:nth-child(1):checked~.product-tabs__inner .product-tabs__item:first-child label,
+.product-tabs input[name=product-tab]:nth-child(2):checked~.product-tabs__inner .product-tabs__item:nth-child(2) label,
+.product-tabs input[name=product-tab]:nth-child(3):checked~.product-tabs__inner .product-tabs__item:nth-child(3) label,
+.product-tabs input[name=product-tab]:nth-child(4):checked~.product-tabs__inner .product-tabs__item:nth-child(4) label {
     color: var(--main-blue);
 }
 
-.product-tabs__label input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+.product-tabs input[name=product-tab]:nth-child(2):checked~.product-tabs__inner .product-tabs__indicator {
+    transform: translateX(100%);
+}
+
+.product-tabs input[name=product-tab]:nth-child(3):checked~.product-tabs__inner .product-tabs__indicator {
+    transform: translateX(200%);
+}
+
+.product-tabs input[name=product-tab]:nth-child(4):checked~.product-tabs__inner .product-tabs__indicator {
+    transform: translateX(300%);
 }
 
 /* PRODUCT TABS END */
+
+/* PRODUCT INFO START */
+
+.product__info {
+    margin: 50px 0 90px;
+}
+
+.product-info.product-info--about .product-info__inner {
+    gap: 200px;
+}
+
+.product-info__inner {
+    display: none;
+    justify-content: space-between;
+}
+
+.product-info__inner.active {
+    display: flex;
+}
+
+.product-info__item.product-name {
+    max-width: 650px;
+}
+
+.product-info__item.product-name .product-info__title {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.product-info__title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.product-info__title span {
+    text-transform: uppercase;
+}
+
+.product-info__descr {
+    margin-top: 25px;
+}
+
+.product-info__docs {
+    display: flex;
+    gap: 64px;
+    margin-top: 25px;
+}
+
+.product-info__doc {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.product-info__doc img {
+    max-width: 20px;
+}
+
+.product-info__doc-name {
+    font-weight: 500;
+}
+
+.product-info__key-features {
+    margin-top: 35px;
+}
+
+.product-info__tags {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.rect-btn--product-info-tag {
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--subtitle-color);
+    padding: 15px 20px;
+}
+
+.product-info__actions {
+    margin-top: 25px;
+}
+
+.product-info__action-list {
+    margin-top: 20px;
+}
+
+.rect-btn--product-info-action {
+    font-weight: 400;
+    padding: 15px 20px;
+}
+
+.product-info__inner.properties {
+    gap: 135px;
+}
+
+.product-info__item.properties {
+    width: 50%;
+}
+
+.product-info__property-title {
+    margin-bottom: 35px;
+}
+
+.product-info__property-title h4 {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.product-info__property {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-bottom: 1px solid #eaebed;
+}
+
+.product-info__property:last-child {
+    margin-bottom: 50px;
+}
+
+.product-info__property-name,
+.product-info__property-value {
+    font-size: 16px;
+}
+
+.product-info__property-value {
+    font-weight: 500;
+}
+
+.product-info__inner.delivery-payment .product-info__title {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.product-info__list {
+    margin-top: 35px;
+}
+
+.product-info__list-title h5 {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.product-info__list-item {
+    position: relative;
+    padding-left: 20px;
+}
+
+.product-info__list-item + .product-info__list-item {
+    margin-top: 10px;
+}
+
+.product-info__list-item::after {
+    content: '';
+    position: absolute;
+    background-image: url('../img/icons/ruby-triangle.svg');
+    background-repeat: no-repeat;
+    width: 8px;
+    height: 8px;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.product-info__inner.guarantee {
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.product-info__guarantee-item {
+    display: block;
+    position: relative;
+    padding: 30px 40px;
+    background-color: #fff;
+    border-radius: 10px;
+    width: calc(50% - 15px);
+    overflow: hidden;
+    transition: var(--default-transition);
+}
+
+.product-info__guarantee-item:hover {
+    transform: scale(1.03);
+}
+
+.product-info__guarantee-item::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 446px;
+    height: 446px;
+    border-radius: 50%;
+    background-color: var(--main-blue);
+    left: 80%;
+    top: -50%;
+}
+
+.product-info__guarantee-text {
+    max-width: 260px;
+}
+
+.product-info__guarantee-text h4 {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.product-info__guarantee-text p {
+    margin-top: 25px;
+    font-size: 16px;
+}
+
+.product-info__guarantee-item img {
+    position: absolute;
+    object-fit: none;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+}
+
+/* PRODUCT INFO END */
