--- a/css/style.css
+++ b/css/style.css
@@ -2180,7 +2180,8 @@ a.footer__nav-link--show {
     color: var(--subtitle-color);
 }
 
-.slider-fastview .slider-fastview-slide {
+.slider-fastview .slider-fastview-slide,
+.slider-product .slider-product-slide {
     width: 522px;
     height: 522px;
     border-radius: 10px;
@@ -2191,7 +2192,8 @@ a.footer__nav-link--show {
     cursor: pointer;
 }
 
-.swiper.slider-fastview img.country {
+.swiper.slider-fastview img.country, 
+.swiper.slider-product img.country {
     position: absolute;
     max-width: 70px;
     max-height: 70px;
@@ -2200,13 +2202,15 @@ a.footer__nav-link--show {
     z-index: 10;
 }
 
-.slider-fastview-slide img {
+.slider-fastview-slide img,
+.slider-product-slide img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
 }
 
-.slider-fastview-slide img.country {
+.slider-fastview-slide img.country,
+.slider-product-slide img.country {
     position: absolute;
     max-width: 70px;
     max-height: 70px;
@@ -2214,11 +2218,13 @@ a.footer__nav-link--show {
     bottom: 15px;
 }
 
-.slider-fastview-thumbs {
+.slider-fastview-thumbs,
+.slider-product-thumbs {
     margin-top: 8px;
 }
 
-.slider-fastview-thumbs-slide {
+.slider-fastview-thumbs-slide,
+.slider-product-thumbs-slide {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2229,12 +2235,14 @@ a.footer__nav-link--show {
     background-color: #fff;
 }
 
-.slider-fastview-thumbs-slide img {
+.slider-fastview-thumbs-slide img,
+.slider-product-thumbs-slide img {
     width: 80%;
     height: 80%;
 }
 
-.slider-fastview-thumbs .swiper-slide-thumb-active {
+.slider-fastview-thumbs .swiper-slide-thumb-active,
+.slider-product-thumbs .swiper-slide-thumb-active {
     border: 2px solid var(--main-blue);
 }
 
