--- a/css/style.css
+++ b/css/style.css
@@ -276,17 +276,17 @@ body.active {
     width: 100%;
 }
 
-.header__search-input:focus ~ .search-result {
+.header__search-input:focus~.search-result {
     width: 210%;
     display: block;
 }
 
-.header.scroll .header__search-input:focus ~ .search-result {
+.header.scroll .header__search-input:focus~.search-result {
     width: 100%;
     display: block;
 }
 
-.header__search-input:focus ~ .search-result .search-result__row {
+.header__search-input:focus~.search-result .search-result__row {
     padding: 10px 25px;
 }
 
@@ -299,7 +299,7 @@ body.active {
     right: 0;
     top: 0;
     border-radius: 30px 30px 10px 10px;
-    transition: all .3s;
+    transition: all .2s;
     z-index: 1;
 }
 
@@ -320,7 +320,7 @@ body.active {
 .search-result__product {
     display: flex;
     gap: 5px;
-    
+
     align-items: center;
 }
 
@@ -480,7 +480,7 @@ body.active {
     gap: 20px;
 }
 
-.catalog-popup__menu-item + .catalog-popup__menu-item {
+.catalog-popup__menu-item+.catalog-popup__menu-item {
     margin-top: 25px;
 }
 
@@ -524,7 +524,7 @@ body.active {
     margin-bottom: 35px;
 }
 
-.catalog-popup__categories-item + .catalog-popup__categories-item {
+.catalog-popup__categories-item+.catalog-popup__categories-item {
     margin-top: 10px;
 }
 
@@ -597,7 +597,7 @@ body.active {
     transition: var(--alt-transition);
 }
 
-.close span + span {
+.close span+span {
     margin-top: 3px;
 }
 
@@ -1236,7 +1236,7 @@ a.header__categories-link:hover span {
     opacity: 0;
 }
 
-.thumbs:hover ~ .thumbs-progressbar {
+.thumbs:hover~.thumbs-progressbar {
     opacity: 1;
 }
 
@@ -1455,7 +1455,7 @@ a.header__categories-link:hover span {
     border: 4px solid var(--main-blue);
 }
 
-.product-card__color-item label > input {
+.product-card__color-item label>input {
     position: absolute;
     opacity: 0;
     z-index: -1;
@@ -1649,7 +1649,7 @@ section.showroom {
     background-color: var(--main-blue);
 }
 
-.swiper-pagination.showroom-pagination .swiper-pagination-bullet + .swiper-pagination-bullet {
+.swiper-pagination.showroom-pagination .swiper-pagination-bullet+.swiper-pagination-bullet {
     margin-left: 20px;
 }
 
@@ -1698,7 +1698,7 @@ span.brands__item-name {
 }
 
 .brands__link {
-    display: block;
+    display: inline-block;
     margin-top: 25px;
     font-size: 18px;
     line-height: 1.5;
@@ -2056,12 +2056,15 @@ a.footer__nav-link--show {
 .round-btn--footer.vk:hover {
     background-color: #0077FF;
 }
+
 .round-btn--footer.whatsapp:hover {
     background-color: #25D366;
 }
+
 .round-btn--footer.youtube:hover {
     background-color: #c4302b;
 }
+
 .round-btn--footer.telegram:hover {
     background-color: #0088cc;
 }
@@ -2121,6 +2124,7 @@ a.footer__nav-link--show {
         opacity: 0;
         transform: scale3d(.3, .3, .3);
     }
+
     50% {
         opacity: 1;
     }
@@ -2192,7 +2196,7 @@ a.footer__nav-link--show {
     cursor: pointer;
 }
 
-.swiper.slider-fastview img.country, 
+.swiper.slider-fastview img.country,
 .swiper.slider-product img.country {
     position: absolute;
     max-width: 70px;
@@ -2407,7 +2411,7 @@ a.footer__nav-link--show {
 
 .product-box__guarantee-text {
     margin: 0;
-} 
+}
 
 .product-box__guarantee-text dt {
     color: var(--subtitle-color);
@@ -2464,7 +2468,7 @@ a.footer__nav-link--show {
     opacity: 0;
 }
 
-.product-box__properties-box + .product-box__properties-box {
+.product-box__properties-box+.product-box__properties-box {
     margin-top: 20px;
 }
 
@@ -2477,16 +2481,16 @@ a.footer__nav-link--show {
 
 .product-box__item--properties::-webkit-scrollbar {
     width: 10px;
-    background-color: rgba(93,108, 123, .25);
+    background-color: rgba(93, 108, 123, .25);
     border-radius: 10px;
 }
 
 .product-box__item--properties::-webkit-scrollbar-thumb {
-    background-color: rgba(93,108, 123, .43);
+    background-color: rgba(93, 108, 123, .43);
     border-radius: 10px;
 }
 
-.product-box__properties-block + .product-box__properties-block {
+.product-box__properties-block+.product-box__properties-block {
     margin-top: 20px;
 }
 
@@ -2505,7 +2509,7 @@ a.footer__nav-link--show {
     gap: 0 10px;
 }
 
-.product-box__properties-item + .product-box__properties-item {
+.product-box__properties-item+.product-box__properties-item {
     margin-top: 20px;
 }
 
@@ -2802,6 +2806,7 @@ a.footer__nav-link--show {
         opacity: 1;
         visibility: visible;
     }
+
     100% {
         opacity: 0;
         visibility: hidden;
@@ -2918,7 +2923,7 @@ form.auth__form {
     position: relative;
 }
 
-.auth__form-group + .auth__form-group {
+.auth__form-group+.auth__form-group {
     margin-top: 10px;
 }
 
@@ -2960,14 +2965,14 @@ form.auth__form {
     height: 16px;
 }
 
-#registerFormEntity + label {
+#registerFormEntity+label {
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
 
-#registerFormEntity + label::before {
+#registerFormEntity+label::before {
     content: '';
     width: 16px;
     height: 16px;
@@ -2980,7 +2985,7 @@ form.auth__form {
     margin-right: 10px;
 }
 
-#registerFormEntity:checked + label::before {
+#registerFormEntity:checked+label::before {
     background-image: url('../img/icons/check.svg');
 }
 
@@ -3057,6 +3062,7 @@ form.auth__form {
     line-height: 1.5;
     margin-top: 15px;
 }
+
 /* AUTH LOGIN END */
 
 /* FANCYBOX START */
