Начал делать адаптив главной страницы

--- a/css/global.css
+++ b/css/global.css
@@ -140,9 +140,9 @@ select::-ms-expand {
 }
 
 .container {
-    padding: 0 20px;
+    padding: 0 15px;
     margin: 0 auto;
-    max-width: 1440px;
+    max-width: 1430px;
 }
 
 .title h2 {
@@ -168,6 +168,8 @@ select::-ms-expand {
     color: #fff;
     font-weight: 500;
     padding: 12px;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 .round-btn {
