--- a/css/product.css
+++ b/css/product.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+.product .label-container {
+    z-index: 5;
+    width: 100%;
+}
+
 /* PRODUCT END */
 
 /* PRODUCT TABS START */
