--- a/css/media.css
+++ b/css/media.css
@@ -1,18 +1,83 @@
 @media (max-width: 1440px) {
+
     .header__middle .header-city,
     .header__search,
     .working-period,
     .oval-btn--header {
         margin-left: 20px;
     }
+
     .header__search {
         max-width: 320px;
     }
+
     .working-period {
         gap: 10px;
     }
+
     .header__categories-item {
         margin-right: 15px;
+    }
+
+    .swiper-button-next {
+        right: -14px;
+    }
+
+    .swiper-button-prev {
+        left: -14px;
+    }
+
+    .popular-grid {
+        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: auto;
+    }
+
+    .popular-card.popular-card--big {
+        grid-area: 1 / 1 / 4 / 4;
+    }
+
+    .popular-card.popular-card--bottom {
+        grid-area: 4 / 1 / 6 / 4;
+    }
+
+    .popular-card.popular-card--center {
+        grid-area: 1 / 4 / 6 / 5;
+    }
+
+    .popular-card.popular-card--right {
+        grid-area: 1 / 5 / 6 / 6;
+    }
+
+    .popular-card__title {
+        font-size: 28px;
+    }
+
+    .popular-card--right .popular__text {
+        margin: 0 auto 0;
+    }
+
+    .popular-card--center .popular__text {
+        margin: 0 auto 0;
+    }
+
+    .popular-card--big .popular__text {
+        margin: 0 10px 0 0;
+    }
+
+    .popular-card .popular__img img {
+        left: 50%;
+        right: 0;
+        top: 0;
+        transform: translateX(-50%) scale(1);
+    }
+
+    .popular-card:hover .popular__img img {
+        transform: translateX(-50%) scale(1.08);
+        color: var(--main-blue)
+    }
+    .popular-card__sections {
+        margin-top: 5px;
+        font-size: 14px;
     }
 }
 
@@ -20,66 +85,249 @@
     .header__search {
         max-width: 280px;
     }
+
     .oval-btn--header {
         max-width: 150px;
     }
+
     .header__bottom-nav {
         gap: 20px;
     }
+
     .header__categories-item {
         margin-right: 10px;
     }
+
     .header {
         font-size: 12px;
     }
 }
 
 @media (max-width: 1200px) {
+
     .header-city,
     .header__search,
     .working-period,
     .oval-btn--header {
         margin-left: 10px;
     }
+
     .header__search {
         max-width: 160px;
     }
+
     .oval-btn--all-categories {
-        width: 150px;
+        width: 140px;
     }
+
     .oval-btn--all-categories .close {
         left: 10px;
     }
+
     .header__middle .header-city {
         gap: 5px;
     }
+
     .oval-btn {
         font-size: 12px;
     }
+
     .header-panel {
         gap: 3px;
     }
+
     .header__middle .header-city__button {
         font-size: 14px;
     }
+
     .round-btn--header {
         width: 42px;
         height: 42px;
     }
+
     .header__categories-item {
         margin-right: 5px;
     }
+
     .header__bottom-nav {
         gap: 10px;
     }
+    .popular-card--big .popular__text {
+        align-self: center;
+    }
+    .popular-card--bottom .popular__text,
+    .popular-card--big .popular__text {
+        text-align: left;
+    }
+    .popular-card__title {
+        font-size: 24px;
+        text-align: left;
+    }
+    
 }
 
 @media (max-width: 992px) {
+
     .header__top,
     .header__content {
         display: none;
     }
+
     .header__mobile {
         display: block;
+    }
+
+    .banner {
+        padding: 0 0 35px;
+    }
+
+    .banner .container {
+        padding: 0;
+    }
+
+    .banner-slider,
+    .banner__slide,
+    .banner__slide-link img {
+        border-radius: 0;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: none;
+    }
+
+    .banner__slide {
+        height: auto;
+    }
+
+    .popular-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 13px;
+    }
+    .popular-card {
+        width: 100%;
+        height: auto;
+        margin: 0;
+    }
+    .popular-card.popular-card--big {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .popular-card.popular-card--bottom {
+        grid-area: 2 / 1 / 2 / 2;
+    }
+
+    .popular-card.popular-card--center {
+        grid-area: 1 / 2 / 1 / 3;
+    }
+
+    .popular-card.popular-card--right {
+        grid-area: 2 / 2 / 2 / 3;
+    }
+
+    .popular__text {
+        max-width: none;
+    }
+
+    .popular__link {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .popular-card img {
+        position: static;
+        width: 100%;
+        height: 100%;
+    }
+
+    .popular__img {
+        width: auto;
+        text-align: center;
+        max-width: 90px;
+        max-height: 90px;
+    }
+
+    .popular-card--big .popular__text,
+    .popular-card--bottom .popular__text,
+    .popular-card--right .popular__img,
+    .popular-card--center .popular__img,
+    .popular-card--center .popular__text,
+    .popular-card--right .popular__text {
+        margin: 0;
+        width: auto;
+        height: auto;
+        text-align: center;
+        align-self: auto;
+    }
+
+    .popular-card--bottom .popular__text,
+    .popular-card__title,
+    .popular-card--big .popular__text {
+        text-align: center;
+    }
+
+    .popular-card__sections {
+        display: none;
+    }
+
+    .popular-card--right .popular__img {
+        order: 0;
+    }
+
+    .popular-card__title {
+        font-size: 24px;
+    }
+
+    .rect-btn--popular {
+        display: block;
+    }
+    .popular-card .popular__img img {
+        transform: translateX(0);
+    }
+    .popular-card:hover .popular__img img {
+        transform: translateX(0) scale(1.08);
+        color: var(--main-blue);
+    }
+}
+
+@media (max-width: 768px) {
+    .title h2 {
+        font-size: 36px;
+    }
+}
+@media (max-width: 576px) {
+    .title h2 {
+        font-size: 26px;
+    }
+    .banner__inner .banner-pagination {
+        gap: 15px;
+    }
+    .popular-card__title {
+        font-size: 16px;
+    }
+    .rect-btn--popular {
+        font-size: 16px;
+    }
+}
+@media (max-width: 400px) {
+    .banner {
+        padding: 0 0 50px;
+    }
+    section {
+        padding: 15px 0;
+    }
+    .title h2 {
+        font-size: 20px;
+    }
+    .title p {
+        font-size: 14px;
+    }
+    .popular-card__title {
+        font-size: 14px;
+    }
+    .rect-btn--popular {
+        font-size: 14px;
     }
 }
