--- a/css/media.css
+++ b/css/media.css
@@ -290,37 +290,47 @@
         transform: translateX(0) scale(1.08);
         color: var(--main-blue);
     }
-}
-
-@media (max-width: 768px) {
-    .title h2 {
-        font-size: 36px;
+    .product-card__info-box {
+        padding-bottom: 5px;
     }
-    .bestseller .product-card {
-        width: auto;
+    .product-card__info-box ~ .product-card__footer-buttons {
+        display: flex;
+        min-height: 40px;
     }
-    .bestseller .product-card__img-box {
-        height: auto;
+    .product-card__info-box .product-card__color-label {
+        width: 18px;
+        height: 18px;
     }
-    .bestseller .round-btn--cart {
-        display: none;
+    .product-card__info-box .product-card__color {
+        gap: 10px;
     }
     .product-card__info-box .product-card__color {
         display: flex;
     }
+    .bestseller .product-card {
+        width: auto;
+    }
+    .bestseller .round-btn--cart {
+        display: none;
+    }
+    
     .bestseller .product-card__footer {
         display: none;
     }
     .bestseller .product-card:hover .product-card__footer {
         display: none;
     }
-    .product-card__info-box {
-        padding-bottom: 5px;
+    .bestseller .product-card__article,
+    .bestseller .product-card__name {
+        margin-top: 5px;
     }
-    .product-card__info-box ~ .product-card__footer-buttons {
-        margin-top: 0;
-        display: flex;
+}
+
+@media (max-width: 768px) {
+    .title h2 {
+        font-size: 36px;
     }
+    
 }
 @media (max-width: 576px) {
     .title h2 {
@@ -354,19 +364,69 @@
     .complects__link {
         margin-top: 10px;
     }
+    .complects__item-label {
+        padding: 10px 25px 10px 15px;
+        font-size: 20px;
+    }
+    .bestseller .product-card__img-box {
+        height: 220px;
+    }
+    .product-card__name a {
+        font-size: 16px;
+    }
+    .product-card__price {
+        font-size: 16px;
+    }
+    .round-btn--fav, .round-btn--compare, .round-btn--cart {
+        width: 30px;
+        height: 30px;
+        padding: 3px;
+    }
     .product-card__info-box .product-card__color-label {
-        width: 18px;
-        height: 18px;
+        width: 14px;
+        height: 14px;
+    }
+    .product-card__info-box ~ .product-card__footer-buttons .product-card__buy-click, 
+    .product-card__info-box ~ .product-card__footer-buttons .product-card__buy-cart {
+        padding: 5px;
+        font-size: 10px;
     }
     .product-card__info-box .product-card__color {
-        gap: 10px;
+        gap: 5px;
     }
-    .bestseller .product-card__buy-click {
-        font-size: 10px;
-        padding: 0;
+    .product-card__info-box .product-card__color-label.checked {
+        border-width: 3px;
     }
-    .bestseller .product-card__buy-cart {
-        font-size: 10px;
+    .product-card {
+        min-height: auto;
+    }
+    .product-card__counter button.minus {
+        padding: 0 10px 0 20px;
+    }
+    .product-card__counter button.plus {
+        padding: 0 20px 0 10px;
+    }
+    .product-info__available {
+        gap: 3px;
+    }
+    .product-info__color {
+        width: 5px;
+        height: 5px;
+    }
+}
+@media (max-width: 500px) {
+    .product-card__name a {
+        font-size: 12px;
+    }
+    .round-btn--fav, .round-btn--compare, .round-btn--cart {
+        width: 25px;
+        height: 25px;
+    }
+    .product-card__article {
+        font-size: 9px;
+    }
+    .product-card__prices {
+        margin-top: 5px;
     }
 }
 @media (max-width: 400px) {
@@ -403,5 +463,28 @@
     }
     .complects__item-quantity {
         font-size: 10px;
+    }
+    .product-card__info-box .product-card__color-label {
+        width: 10px;
+        height: 10px;
+    }
+    .product-info__status {
+        font-size: 8px;
+    }
+    .product-card__name a {
+        font-size: 10px;
+    }
+    .product-card__price {
+        font-size: 12px;
+    }
+    .round-btn--fav, .round-btn--compare, .round-btn--cart {
+        width: 23px;
+        height: 23px;
+    }
+    .product-card__counter button.minus {
+        padding: 0 5px 0 15px;
+    }
+    .product-card__counter button.plus {
+        padding: 0 15px 0 5px;
     }
 }
