--- a/css/style.css
+++ b/css/style.css
@@ -1460,6 +1460,8 @@ a.header__categories-link:hover span {
 
 .product-card__img-box img {
     width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .fast-view-btn {
@@ -1527,7 +1529,7 @@ a.header__categories-link:hover span {
     gap: 10px;
 }
 
-.product-card__info-box > .product-card__footer-buttons {
+.product-card__info-box ~ .product-card__footer-buttons {
     margin-top: 0;
     display: none;
 }
@@ -1707,7 +1709,6 @@ a.header__categories-link:hover span {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
     font-size: 16px;
     line-height: 1.5;
 }
@@ -1727,8 +1728,14 @@ a.header__categories-link:hover span {
 }
 
 .product-card__counter button {
-    width: 40%;
     height: 100%;
+}
+
+.product-card__counter button.minus {
+    padding: 0 20px 0 30px;
+}
+.product-card__counter button.plus {
+    padding: 0 30px 0 20px;
 }
 
 .product-card__buy-click {
