--- a/css/media.css
+++ b/css/media.css
@@ -80,9 +80,14 @@
         margin-top: 5px;
         font-size: 14px;
     }
+
     .complects-swiper-button-next,
     .complects-swiper-button-prev {
         display: flex;
+    }
+
+    .brands__item {
+        width: 100%;
     }
 }
 
@@ -105,6 +110,14 @@
 
     .header {
         font-size: 12px;
+    }
+
+    .brand-banner__text {
+        font-size: 28px;
+    }
+
+    .brand-banner__img {
+        max-width: 240px;
     }
 }
 
@@ -172,6 +185,17 @@
         text-align: left;
     }
 
+    .brand-banner__logo {
+        max-width: 280px;
+    }
+
+    .brand-banner__img {
+        max-width: 200px;
+    }
+
+    .brand-banner__text {
+        font-size: 24px;
+    }
 }
 
 @media (max-width: 992px) {
@@ -307,11 +331,6 @@
         padding-bottom: 5px;
     }
 
-    .product-card__info-box~.product-card__footer-buttons {
-        display: flex;
-        min-height: 40px;
-    }
-
     .product-card__info-box .product-card__color-label {
         width: 18px;
         height: 18px;
@@ -346,7 +365,75 @@
         margin-top: 5px;
     }
 
-    
+    .product-card__mobile-cart {
+        display: flex;
+    }
+
+    .showroom__text {
+        padding: 40px 0 25px 20px;
+    }
+
+    .title--showroom span {
+        left: -20px;
+    }
+
+    .swiper-pagination.showroom-pagination {
+        left: 20px;
+    }
+
+    .showroom-slider {
+        height: 600px;
+    }
+
+    .brand-banner__logo {
+        max-width: 200px;
+    }
+
+    .brand-banner__img {
+        max-width: 150px;
+    }
+
+    .brand-banner__text {
+        font-size: 20px;
+        /* max-width: 320px; */
+    }
+
+    .oval-btn--brand-banner {
+        font-size: 11px;
+    }
+
+    .videos__banner {
+        display: none;
+    }
+
+    .faq__inner {
+        gap: 20px;
+    }
+
+    .faq__item-question,
+    .faq__item-answer {
+        font-size: 16px;
+    }
+
+    .faq__item {
+        padding: 10px;
+    }
+
+}
+
+@media (max-width: 820px) {
+
+    .footer__descr,
+    .footer__nav-link,
+    .footer__confidence-link,
+    .footer__confidence p {
+        font-size: 13px;
+    }
+
+    .footer__nav-item+.footer__nav-item,
+    .footer__nav-list {
+        margin-top: 10px;
+    }
 }
 
 @media (max-width: 768px) {
@@ -354,6 +441,151 @@
         font-size: 36px;
     }
 
+    .title--showroom span {
+        width: 150px;
+        font-size: 16px;
+    }
+
+    .showroom__text {
+        padding-right: 5px;
+    }
+
+    .showroom-slider {
+        border-radius: 0;
+    }
+
+    .showroom .container {
+        padding: 0;
+    }
+
+    .brand-banner {
+        padding: 20px;
+    }
+
+    .brand-banner__logo {
+        max-width: 150px;
+    }
+
+    .brand-banner__img {
+        display: none;
+    }
+
+    .faq__inner {
+        gap: 10px;
+    }
+
+    .faq__item-question,
+    .faq__item-answer {
+        font-size: 14px;
+    }
+
+    .footer__inner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__descr {
+        display: none;
+    }
+
+    .footer__info-top {
+        text-align: center;
+    }
+
+    .footer__info .footer__contacts {
+        display: none;
+    }
+
+    .footer__nav {
+        flex-direction: column;
+        margin-top: 30px;
+    }
+
+    .footer__nav .footer__nav-list {
+        display: none;
+    }
+
+    .footer__nav-box+.footer__nav-box {
+        margin-top: 30px;
+    }
+
+    .footer__nav~.footer__contacts {
+        display: block;
+    }
+
+    .footer__bottom {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+    }
+
+    .footer__socials {
+        gap: 22px;
+        padding-bottom: 25px;
+        border-bottom: 1px solid rgba(140, 140, 140, .5);
+        width: 100%;
+        justify-content: center;
+    }
+
+    .footer__confidence {
+        text-align: center;
+        margin-top: 25px;
+    }
+
+    .footer__nav-title {
+        position: relative;
+        cursor: pointer;
+    }
+
+    .footer__nav-title.active ~ .footer__nav-list {
+        display: block;
+    }
+
+    .footer__nav-title.active::before {
+        transform: rotate(225deg);
+    }
+    .footer__nav-title::before {
+        content: '';
+        border: solid #8c8c8c;
+        border-width: 0 1px 1px 0;
+        display: block;
+        padding: 3px;
+        transform: rotate(45deg);
+        position: absolute;
+        top: 15px;
+        right: 20px;
+        transition: var(--alt-transition);
+        display: block;
+    }
+}
+
+@media (max-width: 620px) {
+    .faq__inner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .faq__item {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .faq__item.active .faq__item-answer {
+        position: static;
+        box-shadow: none;
+        padding: 0;
+        height: auto;
+    }
+
+    .faq__item span {
+        display: block;
+    }
+
+    .rect-btn--faq {
+        font-size: 16px;
+        padding: 10px;
+    }
 }
 
 @media (max-width: 576px) {
@@ -459,8 +691,82 @@
     }
 
     .product-info__color {
-        width: 5px;
-        height: 5px;
+        width: 7px;
+        height: 7px;
+    }
+
+    .product-card__mobile-footer .product-card__buy-click,
+    .product-card__mobile-footer .product-card__mobile-cartб .product-card__mobile-footer .product-card__counter {
+        font-size: 12px;
+    }
+
+    .product-info__available {
+        align-items: baseline;
+    }
+
+    .bestseller .product-card__article,
+    .bestseller .product-card__name {
+        margin-top: 0;
+    }
+
+    .showroom__info-title {
+        font-size: 16px;
+    }
+
+    .showroom__info-text p {
+        font-size: 14px;
+    }
+
+    .showroom__info-text {
+        gap: 10px;
+    }
+
+    .rect-btn--showroom {
+        font-size: 14px;
+        padding: 10px 20px;
+        margin-top: 20px;
+    }
+
+    .swiper-pagination.showroom-pagination {
+        bottom: 20px;
+    }
+
+    .showroom-slider {
+        height: 500px;
+    }
+
+    .swiper-brands {
+        padding: 30px 12px 25px 12px;
+        margin: 0 -12px -25px -12px;
+    }
+
+    .brands__marquee {
+        margin-top: 20px;
+    }
+
+    .brand-banner__text {
+        font-size: 20px;
+    }
+
+    .oval-btn--brand-banner {
+        font-size: 12px;
+    }
+
+    .brand-banner {
+        flex-direction: column;
+        text-align: center;
+        gap: 15px;
+        height: auto;
+    }
+
+    .videos__item-card {
+        width: 185px;
+        height: 330px;
+    }
+
+    .videos__item-name {
+        font-size: 14px;
+        margin-top: 15px;
     }
 }
 
@@ -482,6 +788,11 @@
 
     .product-card__prices {
         margin-top: 5px;
+    }
+
+    .rect-btn--showroom {
+        font-size: 12px;
+        padding: 5px 10px;
     }
 }
 
@@ -561,5 +872,42 @@
 
     .product-card__counter button.plus {
         padding: 0 15px 0 5px;
+    }
+
+    .product-card__mobile-footer .product-card__buy-click,
+    .product-card__mobile-footer .product-card__mobile-cart {
+        font-size: 10px;
+        padding: 5px 0;
+    }
+
+    .product-card__mobile-footer .product-card__counter {
+        font-size: 10px;
+    }
+
+    .product-info__color {
+        width: 5px;
+        height: 5px;
+    }
+
+    .showroom__info-text p {
+        font-size: 10px;
+    }
+
+    .showroom__info-text img {
+        width: 14px;
+        height: 14px;
+    }
+
+    .showroom__info-text {
+        gap: 5px;
+    }
+
+    .showroom-slider {
+        height: 450px;
+    }
+
+    .rect-btn--faq {
+        font-size: 12px;
+        margin-top: 10px;
     }
 }
