--- a/css/style.css
+++ b/css/style.css
@@ -1539,6 +1539,28 @@ a.header__categories-link:hover span {
     display: none;
 }
 
+.product-card__info-box~.product-card__footer-buttons.active {
+    display: flex;
+    min-height: 40px;
+}
+
+.product-card__mobile-footer {
+    border-radius: 0 0 10px 10px;
+    overflow: hidden;
+}
+
+.product-card__mobile-footer .product-card__footer-buttons {
+    display: none;
+}
+
+.product-card__mobile-footer .product-card__footer-buttons.active {
+    display: flex;
+}
+
+.product-card__mobile-footer .product-card__buy-click {
+    border-radius: 0;
+}
+
 .product-info__available {
     display: flex;
     gap: 10px;
@@ -1694,10 +1716,26 @@ a.header__categories-link:hover span {
     z-index: -1;
 }
 
+.product-card__mobile-cart {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+    color: #fff;
+    width: 100%;
+    background-color: var(--main-blue);
+    border-radius: 0 0 10px 10px;
+    font-size: 14px;
+    line-height: 1.5;
+}
+
+.product-card__mobile-cart.hide {
+    display: none;
+}
+
 .product-card__footer-buttons {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
 }
 
 .product-card__buy-cart {
@@ -1746,7 +1784,7 @@ a.header__categories-link:hover span {
 .product-card__buy-click {
     padding: 12px 0;
     color: #fff;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.5;
     border-radius: 5px 5px 5px 0;
     width: 50%;
@@ -1788,6 +1826,7 @@ section.showroom {
 .showroom__text {
     padding: 100px 0 50px 50px;
     width: 50%;
+    position: relative;
 }
 
 .title--showroom {
@@ -1900,18 +1939,18 @@ section.showroom {
     text-align: center;
 }
 
-.brands__items {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
+.swiper-brands {
+    padding: 50px 12px 25px 12px;
+    margin: 20px -12px -25px -12px;
+    margin-top: 20px;
 }
 
 .brands__item {
+    display: block;
     width: 440px;
     height: 220px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0px 4px 30px 0px rgba(25, 33, 79, 0.25);
 }
 
 .brands__item:hover {
@@ -2007,6 +2046,12 @@ span.brands__item-name {
     display: flex;
     flex-direction: column;
     gap: 25px 0;
+}
+
+.videos__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .videos__banner-cover {
@@ -2109,9 +2154,10 @@ span.brands__item-name {
 
 .faq__inner {
     margin-top: 75px;
-    display: flex;
+    display: grid;
     gap: 20px 50px;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 1fr;
 }
 
 .faq__title {
@@ -2121,10 +2167,29 @@ span.brands__item-name {
 .faq__item {
     background-color: #fff;
     padding: 25px 15px;
-    max-width: 675px;
-    width: 50%;
+    width: 100%;
     cursor: pointer;
     position: relative;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.faq__item span {
+    border: solid #8c8c8c;
+    border-width: 0 1px 1px 0;
+    display: block;
+    padding: 3px;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    transition: var(--alt-transition);
+    display: none;
+}
+
+.faq__item.active span {
+    transform: rotate(225deg);
 }
 
 .faq__item-question {
@@ -2133,7 +2198,7 @@ span.brands__item-name {
 
 .faq__item.active .faq__item-answer {
     overflow: visible;
-    height: calc(100% + 20px);
+    height: 200%;
     box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
 }
 
@@ -2194,6 +2259,7 @@ span.brands__item-name {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 10px;
 }
 
 .footer__logo {
@@ -2252,6 +2318,10 @@ span.brands__item-name {
     justify-content: space-between;
 }
 
+.footer__nav ~ .footer__contacts {
+    display: none;
+}
+
 h4.footer__nav-title a {
     font-size: 18px;
     font-weight: 700;
@@ -2287,8 +2357,8 @@ a.footer__nav-link--show {
 }
 
 .round-btn--footer {
-    width: 48px;
-    height: 48px;
+    min-width: 48px;
+    min-height: 48px;
     background-color: #343538;
 }
 
