--- a/css/media.css
+++ b/css/media.css
@@ -418,6 +418,11 @@
     .faq__item {
         padding: 10px;
     }
+    .product-card__img-box-link .thumbs,
+    .product-card__img-box-link .thumbs-progressbar,
+    .product-card__img-box-link ~ .fast-view-btn {
+        display: none;
+    }
 }
 
 @media (max-width: 820px) {
@@ -536,13 +541,14 @@
         cursor: pointer;
     }
 
-    .footer__nav-title.active ~ .footer__nav-list {
+    .footer__nav-title.active~.footer__nav-list {
         display: block;
     }
 
     .footer__nav-title.active::before {
         transform: rotate(225deg);
     }
+
     .footer__nav-title::before {
         content: '';
         border: solid #8c8c8c;
@@ -793,9 +799,11 @@
         font-size: 12px;
         padding: 5px 10px;
     }
+
     .header-menu .header-menu__nav-title a {
         font-size: 16px;
     }
+
     .header-menu__close.close-btn--header-menu svg {
         width: 10px;
         height: 10px;
@@ -915,5 +923,22 @@
     .rect-btn--faq {
         font-size: 12px;
         margin-top: 10px;
+    }
+}
+
+@media (hover: hover) {
+    a:hover {
+        color: var(--main-blue);
+    }
+
+    .header-menu .header-menu__nav-title a:hover,
+    .header-menu .header-menu__nav-item a:hover {
+        color: var(--main-blue);
+    }
+}
+
+@media (hover: none) {
+    a:active {
+        color: var(--main-blue);
     }
 }
