--- a/css/global.css
+++ b/css/global.css
@@ -502,7 +502,7 @@ select::-ms-expand {
     left: 0;
     height: 75px;
     z-index: 100;
-    display: flex;
+    display: none;
     justify-content: center;
 }
 
